--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p class="main-block__text-bold">I ❤️ HTML, SCSS, JavaScript and ReactJS</p>
               <ul class="main-block__list">
                 <li>
-                  <a target="_blank" href="#"
+                  <a target="_blank" href="docs/Ludmila Volia Front-End.pdf"
                     >CV
                     <img class="main-block__img" src="./img/cv.png" alt="CV" />
                   </a>
